Fixes weird spacing between the comments.
Overrides default settings for comment form.

--- a/assets/sass/initialise/_normalise.scss
+++ b/assets/sass/initialise/_normalise.scss
@@ -3,10 +3,6 @@
 @use 'quotation-marks';
 @use 'wp-overrides';
 
-:root {
-  margin-block-start: 0;
-  margin-block-end: 0;
-}
 /**
  * -----------------------------------------------------------------------------
  * Normalise the CSS.
@@ -297,13 +293,14 @@ select { /* 1 */
  * Correct the inability to style clickable types in iOS and Safari.
  */
 
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  // -webkit-appearance: button;
-  appearance: button;
-}
+// button,
+// [type="button"],
+// [type="reset"],
+// [type="submit"] {
+//   -moz-appearance: none;
+//   -webkit-appearance: none;
+//   appearance: none;
+// }
 
 /**
  * Remove the inner border and padding in Firefox.
